Fix T69853: Object orientation is wrong with some AMD deprecated drivers.

This solution only reuses the performance workaround made for Intel.
But the original problem was not solved.
Not much we can do to solve it.